[package]
name = "dnd-thing"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dnd_thing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rand = "0.8.5"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-websocket = "2"
tauri-plugin-shell = "2"
tokio-tungstenite = "0.24.0"
tokio = "1.42.0"
http = "1.2.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
